[package]
name = "constructor"
version = "0.1.0"
authors = ["jnemith <jn9159@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.2.0"
cgmath = "0.17.0"
futures = "0.3.5"
shaderc = "0.6.2"
winit = "0.22"
wgpu = "0.5.0"
wgpu_glyph = "0.9.0"

log = "0.4.0"
env_logger = "0.7.1"